--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "release-test-mojipcmobila",
   "version": "1.0.0",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "semantic-release": "semantic-release"
   },
   "author": "",
   "license": "ISC",
