feat(core): add npm publish

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "release-test-mojipcmobila",
   "version": "1.0.0",
+  "private": "false",
   "scripts": {
     "semantic-release": "semantic-release"
   },
