--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,31 +1,36 @@
-name: Release
+name: Release on main
 
 on:
   push:
     branches:
       - main
-      - develop
 
 jobs:
   release:
     runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
+    steps:
+      - uses: actions/checkout@v3
+
+      - uses: actions/setup-node@v3
         with:
           node-version: '20'
-          registry-url: 'https://registry.npmjs.org'
 
-      - name: Install dependencies
-        run: npm ci
+      - run: npm ci
 
-      - name: Run semantic-release
+      - name: Release
+        id: release
+        run: npx semantic-release
         env:
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-        run: npm run semantic-release
+      - name: Sync version to develop
+        if: steps.release.outputs.new_version != ''
+        run: |
+          git fetch origin develop
+          git checkout develop
+          git tag -f ${{ steps.release.outputs.new_version }}
+          git push origin develop --tags --force
+        env:
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
