--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,7 +9,7 @@ jobs:
   release:
     runs-on: ubuntu-latest
     env:
-      GH_TOKEN: ${{ secrets.GH_TOKEN }}
+      GH_TOKEN: ${{ secrets.GITHUB_TOKEN  }}
       NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
     steps:
       - uses: actions/checkout@v3
@@ -21,14 +21,11 @@ jobs:
       - run: npm ci
 
       - name: Check GH_TOKEN
-        run: echo "GH_TOKEN=${GH_TOKEN}"
+        run: echo "GH_TOKEN=${secrets.GH_TOKEN}"
 
       - name: Release
         id: release
         run: npx semantic-release
-        env:
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
 
       - name: Sync version to develop
         if: steps.release.outputs.new_version != ''
