--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -9,6 +9,9 @@ on:
 jobs:
   pre-release:
     runs-on: ubuntu-latest
+    env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
@@ -27,6 +30,3 @@ jobs:
         if: ${{ steps.count.outputs.merged_pr_count >= 2 }}
         # if: ${{ steps.count.outputs.merged_pr_count >= 10 }}
         run: npx semantic-release --branches develop --tag prerelease
-        env:
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
