--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,9 +27,9 @@ jobs:
       - name: Sync version to develop
         if: steps.release.outputs.new_version != ''
         run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
           git fetch origin develop
           git checkout develop
-          git tag -f ${{ steps.release.outputs.new_version }}
-          git push origin develop --tags --force
-        env:
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          git merge --no-ff main -m "chore: merge main after release ${GITHUB_SHA}"
+          git push origin develop
