--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,35 +1,53 @@
-name: Release on main
+name: 🚀 Release on main
 
 on:
   push:
     branches:
       - main
 
+permissions:
+  contents: write
+  packages: write
+  id-token: write
+
 jobs:
   release:
+    name: 📦 Semantic Release
     runs-on: ubuntu-latest
+
     env:
-      GH_TOKEN: ${{ secrets.GITHUB_TOKEN  }}
+      GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+
     steps:
-      - uses: actions/checkout@v3
-
-      - uses: actions/setup-node@v3
+      - name: 🛒 Checkout repository
+        uses: actions/checkout@v4
         with:
-          node-version: '20'
+          fetch-depth: 0
 
-      - run: npm ci
+      - name: 🧰 Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: npm
 
-      - name: Release
-        id: release
+      - name: 📥 Install dependencies
+        run: npm ci
+
+      - name: 🚀 Run Semantic Release
+        id: semantic
         run: npx semantic-release
 
-      - name: Sync version to develop
-        if: steps.release.outputs.new_version != ''
+      - name: Print env
+        run: printenv
+
+      - name: 🔄 Sync main → develop
+        if: steps.semantic.outputs.new_release_published == 'true'
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
+
           git fetch origin develop
           git checkout develop
-          git merge --no-ff main -m "chore: merge main after release ${GITHUB_SHA}"
+          git merge --no-ff origin/main -m "chore: sync main after release"
           git push origin develop
