fix: small change

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -63,10 +63,10 @@ jobs:
           echo "Using npm tag: $NPM_TAG"
 
 
-      - name: Publish to npm
-        run: npm publish --access public --tag ${{ steps.determine_npm_tag.outputs.npm_tag }}
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+      # - name: Publish to npm
+      #   run: npm publish --access public --tag ${{ steps.determine_npm_tag.outputs.npm_tag }}
+      #   env:
+      #     NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
       - name: 🔄 Sync main → develop
         if: ${{ success() }}
