--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,80 +1,93 @@
-name: 🚀 Release (Test Mode)
+name: release and publish
 
-on:
-  push:
-    tags:
-      - 'v*'
-
-permissions:
-  contents: write
+"on": workflow_dispatch
 
 jobs:
-  release:
-    runs-on: ubuntu-latest
+    release:
+        runs-on: ubuntu-20.04
+        steps:
+            - name: Checkout source code
+              uses: actions/checkout@v3
+            - name: Install dependencies
+              uses: npm ci
+            - name: end message
+              uses: echo "All done"
+# name: 🚀 Release (Test Mode)
 
-    steps:
-      # 1️⃣ Checkout repository
-      - name: 🛒 Checkout repository
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
+# on:
+#   push:
+#     tags:
+#       - 'v*'
 
-      # 2️⃣ Setup Node.js
-      - name: 🧰 Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 22.x
-          cache: 'npm'
+# permissions:
+#   contents: write
 
-      # 3️⃣ Install dependencies
-      - name: 📥 Install dependencies
-        run: npm ci
+# jobs:
+#   release:
+#     runs-on: ubuntu-latest
 
-      # 4️⃣ Generate Changelog
-      - name: 📝 Generate Changelog
-        run: npx changelogithub
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#     steps:
+#       # 1️⃣ Checkout repository
+#       - name: 🛒 Checkout repository
+#         uses: actions/checkout@v3
+#         with:
+#           fetch-depth: 0
 
-      # # 5️⃣ Build project
-      # - name: 🏗️ Build
-      #   run: npm run build
+#       # 2️⃣ Setup Node.js
+#       - name: 🧰 Setup Node.js
+#         uses: actions/setup-node@v3
+#         with:
+#           node-version: 22.x
+#           cache: 'npm'
 
-      # 6️⃣ Determine npm tag
-      - name: 🏷️ Determine npm tag
-        id: determine_npm_tag
-        shell: bash
-        run: |
-          TAG="${GITHUB_REF#refs/tags/}"
+#       # 3️⃣ Install dependencies
+#       - name: 📥 Install dependencies
+#         run: npm ci
 
-          if [[ "$TAG" =~ -(next|canary|beta|rc) ]]; then
-            NPM_TAG=${BASH_REMATCH[1]}
-          else
-            git fetch origin main --depth=1
-            if git merge-base --is-ancestor origin/main "$GITHUB_SHA"; then
-              NPM_TAG="latest"
-            else
-              echo "::error::Tag must be from main or version branch (vX.Y.x-latest)"
-              exit 1
-            fi
-          fi
+#       # 4️⃣ Generate Changelog
+#       - name: 📝 Generate Changelog
+#         run: npx changelogithub
+#         env:
+#           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-          echo "npm_tag=$NPM_TAG" >> $GITHUB_OUTPUT
-          echo "Using npm tag: $NPM_TAG"
+#       # # 5️⃣ Build project
+#       # - name: 🏗️ Build
+#       #   run: npm run build
 
+#       # 6️⃣ Determine npm tag
+#       - name: 🏷️ Determine npm tag
+#         id: determine_npm_tag
+#         shell: bash
+#         run: |
+#           TAG="${GITHUB_REF#refs/tags/}"
 
-      # - name: Publish to npm
-      #   run: npm publish --access public --tag ${{ steps.determine_npm_tag.outputs.npm_tag }}
-      #   env:
-      #     NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+#           if [[ "$TAG" =~ -(next|canary|beta|rc) ]]; then
+#             NPM_TAG=${BASH_REMATCH[1]}
+#           else
+#             git fetch origin main --depth=1
+#             if git merge-base --is-ancestor origin/main "$GITHUB_SHA"; then
+#               NPM_TAG="latest"
+#             else
+#               echo "::error::Tag must be from main or version branch (vX.Y.x-latest)"
+#               exit 1
+#             fi
+#           fi
 
-      - name: 🔄 Sync main → develop
-        if: ${{ success() }}
-        run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-          git fetch origin develop
-          git checkout develop
-          git pull origin develop
-          git merge --no-ff origin/main -m "chore: sync main after release $GITHUB_REF" --allow-unrelated-histories || true
-          git push origin develop
+#           echo "npm_tag=$NPM_TAG" >> $GITHUB_OUTPUT
+#           echo "Using npm tag: $NPM_TAG"
+
+#       # - name: Publish to npm
+#       #   run: npm publish --access public --tag ${{ steps.determine_npm_tag.outputs.npm_tag }}
+#       #   env:
+#       #     NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+
+#       - name: 🔄 Sync main → develop
+#         if: ${{ success() }}
+#         run: |
+#           git config user.name "github-actions[bot]"
+#           git config user.email "github-actions[bot]@users.noreply.github.com"
+#           git fetch origin develop
+#           git checkout develop
+#           git pull origin develop
+#           git merge --no-ff origin/main -m "chore: sync main after release $GITHUB_REF" --allow-unrelated-histories || true
+#           git push origin develop
