--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,8 +14,8 @@ jobs:
 
             - name: initialize git user
               run: |
-                  git config --global user.name "CI Release Bot"
-                  git config --global user.email "ci-bot@users.noreply.github.com"
+                  git config --global user.email "shaadcode@gmail.com"
+                  git config --global user.name "shaadcode"
             - name: initialize the npm config
               run: npm config set //registry.npmjs.org/:_authToken $NPM_TOKEN
               env:
