--- a/.release-it.json
+++ b/.release-it.json
@@ -1,18 +1,72 @@
 {
   "$schema": "https://unpkg.com/release-it@19/schema/release-it.json",
   "git": {
-    "commitMessage": "chore: release v${version}"
+    "commitMessage": "chore: release v${version}",
+    "tagName": "v${version}",
+    "push": true
   },
   "hooks": {
     "before:init": [
-      "git pull"
+      "git pull --ff-only"
     ],
     "after:bump": "npx auto-changelog -p"
   },
   "github": {
-    "release": true
+    "release": true,
+    "releaseName": "Release v${version}",
+    "changelog": "CHANGELOG.md",
+    "preRelease": false
   },
   "npm": {
     "publish": true
+  },
+  "plugins": {
+    "@release-it/conventional-changelog": {
+      "preset": "conventionalcommits",
+      "infile": "CHANGELOG.md",
+      "header": "# Changelog",
+      "types": [
+        {
+          "type": "feat",
+          "section": "🚀 Features",
+          "hidden": false
+        },
+        {
+          "type": "fix",
+          "section": "🐞 Bug Fixes",
+          "hidden": false
+        },
+        {
+          "type": "chore",
+          "section": "🧹 Chores",
+          "hidden": false
+        },
+        {
+          "type": "docs",
+          "section": "📚 Documentation",
+          "hidden": false
+        },
+        {
+          "type": "refactor",
+          "section": "🔧 Refactoring",
+          "hidden": false
+        },
+        {
+          "type": "perf",
+          "section": "⚡ Performance",
+          "hidden": false
+        },
+        {
+          "type": "test",
+          "section": "✅ Tests",
+          "hidden": false
+        },
+        {
+          "type": "style",
+          "section": "🎨 Styles",
+          "hidden": false
+        }
+      ]
+    }
   }
 }
