--- a/.release-it.json
+++ b/.release-it.json
@@ -13,9 +13,8 @@
   },
   "github": {
     "release": true,
-    "releaseName": "Release v${version}",
-    "changelog": "CHANGELOG.md",
-    "preRelease": false
+    "releaseName": "v${version}",
+    "changelog": "CHANGELOG.md"
   },
   "npm": {
     "publish": true
