--- a/.release-it.json
+++ b/.release-it.json
@@ -20,51 +20,53 @@
   },
   "plugins": {
     "@release-it/conventional-changelog": {
-      "preset": "conventionalcommits",
       "infile": "CHANGELOG.md",
       "header": "# Changelog",
-      "types": [
-        {
-          "type": "feat",
-          "section": "🚀 Features",
-          "hidden": false
-        },
-        {
-          "type": "fix",
-          "section": "🐞 Bug Fixes",
-          "hidden": false
-        },
-        {
-          "type": "chore",
-          "section": "🧹 Chores",
-          "hidden": false
-        },
-        {
-          "type": "docs",
-          "section": "📚 Documentation",
-          "hidden": false
-        },
-        {
-          "type": "refactor",
-          "section": "🔧 Refactoring",
-          "hidden": false
-        },
-        {
-          "type": "perf",
-          "section": "⚡ Performance",
-          "hidden": false
-        },
-        {
-          "type": "test",
-          "section": "✅ Tests",
-          "hidden": false
-        },
-        {
-          "type": "style",
-          "section": "🎨 Styles",
-          "hidden": false
-        }
-      ]
+      "preset": {
+        "name": "conventionalcommits",
+        "types": [
+          {
+            "type": "feat",
+            "section": "🚀 Features",
+            "hidden": false
+          },
+          {
+            "type": "fix",
+            "section": "🐞 Bug Fixes",
+            "hidden": false
+          },
+          {
+            "type": "chore",
+            "section": "🧹 Chores",
+            "hidden": false
+          },
+          {
+            "type": "docs",
+            "section": "📚 Documentation",
+            "hidden": false
+          },
+          {
+            "type": "refactor",
+            "section": "🔧 Refactoring",
+            "hidden": false
+          },
+          {
+            "type": "perf",
+            "section": "⚡ Performance",
+            "hidden": false
+          },
+          {
+            "type": "test",
+            "section": "✅ Tests",
+            "hidden": false
+          },
+          {
+            "type": "style",
+            "section": "🎨 Styles",
+            "hidden": false
+          }
+        ]
+      }
     }
   }
 }
