--- a/.release-it.json
+++ b/.release-it.json
@@ -7,7 +7,8 @@
   },
   "hooks": {
     "before:init": [
-      "git pull --ff-only"
+      "git pull --ff-only",
+      "if [ ! -f CHANGELOG.md ]; then echo '# Changelog' > CHANGELOG.md && git add CHANGELOG.md && git commit -m 'chore: add initial changelog'; fi"
     ]
   },
   "github": {
