--- a/.release-it.json
+++ b/.release-it.json
@@ -7,8 +7,7 @@
   },
   "hooks": {
     "before:init": [
-      "git pull --ff-only",
-      "if [ ! -f CHANGELOG.md ]; then echo '# Changelog' > CHANGELOG.md && git add CHANGELOG.md && git commit -m 'chore: add initial changelog'; fi"
+      "git pull"
     ]
   },
   "github": {
