--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,7 +29,7 @@ jobs:
           if [ "${GITHUB_REF_NAME}" = "develop" ]; then
           npx release-it --preRelease beta
           elif [ "${GITHUB_REF_NAME}" = "main" ]; then
-          npx release-it
+          npm run release
           fi
         env:
           NPM_TOKEN: ${{secrets.NPM_TOKEN}}
