--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.27.0-0",
   "scripts": {
     "semantic-release": "semantic-release",
-    "release": "release-it",
-    "pre-release": "release-it --preRelease"
+    "release": "release-it --config release-it.config.ts",
+    "pre-release": "release-it --config release-it.prerelease.config.ts --preRelease=beta"
   },
   "author": "",
   "license": "ISC",
