--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,12 +30,12 @@ jobs:
         env:
           NPM_TOKEN: ${{secrets.NPM_TOKEN}}
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
-      - name: Create PR to merge main → develop
-        if: success()
-        uses: peter-evans/create-pull-request@v6
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          base: develop
-          branch: sync-main-to-develop
-          title: "Sync main → develop"
-          body: "This PR was automatically created after release to sync main into develop."
+      # - name: Create PR to merge main → develop
+      #   if: success()
+      #   uses: peter-evans/create-pull-request@v6
+      #   with:
+      #     token: ${{ secrets.GITHUB_TOKEN }}
+      #     base: develop
+      #     branch: sync-main-to-develop
+      #     title: "Sync main → develop"
+      #     body: "This PR was automatically created after release to sync main into develop."
