--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "release-test-mojipcmobila",
-  "version": "1.30.1",
+  "version": "1.31.0-beta.0",
   "scripts": {
     "semantic-release": "semantic-release",
     "release": "release-it --config release-it.config.ts",
