--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "@semantic-release/git": "^10.0.1",
     "release-it": "^19.0.5",
     "semantic-release": "^24.2.7"
+  },
+  "dependencies": {
+    "conventional-changelog-conventionalcommits": "^8.0.0"
   }
 }
