--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -6,3 +6,7 @@ body:
       attributes:
           value: |
               thanks for taking the time to fill out this bug report!
+    - type: textarea
+      attributes:
+        value: |
+         hello
