--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -10,6 +10,6 @@ body:
       attributes:
         label: what happened?
         description: also tell us, what did you expect to happen?
-        palceholder: tell us what you see!
+        placeholder: tell us what you see!
       validations:
           required: true
