--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -1,6 +1,6 @@
 name: گزارش خطا
 description: گزارش باگ یا مشکلی که در پروژه رخ داده است
-title: گزارش خطا
+title: گزارش خطا تایتل
 labels: []
 assignees: []
 
