--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -1,8 +1,7 @@
-name: گزارش خطا
+name: 🐞 گزارش خطا
 description: گزارش باگ یا مشکلی که در پروژه رخ داده است
-title: گزارش خطا تایتل
 labels: []
-assignees: []
+assignees: ["shaadcode"]
 
 body:
   - type: markdown
@@ -34,6 +33,10 @@ body:
     attributes:
       label: 🔄 مراحل بازتولید
       description: مراحل مرحله‌به‌مرحله برای بازتولید مشکل
+      placeholder: |
+        1. 
+        2. 
+        3. 
       placeholder: |
         1. وارد صفحه X شوید
         2. روی دکمه Y کلیک کنید
