--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -44,11 +44,13 @@ body:
     validations:
       required: false
 
-  - type: input
-    id: link
+  - type: textarea
+    id: links
     attributes:
       label: 🔗 لینک / صفحه
-      description: صفحه یا آدرسی که این اتفاق در آن رخ داده
-      placeholder: لینک موردنظر را وارد کنید
+      description: هر تعداد لینک که لازم است اینجا وارد کنید (هر خط یک لینک)
+      placeholder: |
+        https://example.com/page1
+        https://example.com/page2
     validations:
       required: false
